<resources>
    <string name="app_name">SmartCarPark</string>
    <string name="carname">Smart Car Park</string>
    <string name="Username"></string>
    <string name="Password"></string>
    <string name="Button">Login</string>
    <string name="signin">Sign Up</string>
    <string name="FulName"></string>
    <string name="Passwordreg"></string>
    <string name="Regbutton">REGISTER</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    <string name="Acountlink"></string>-->

</resources>