<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@drawable/car"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="Smart Car Park"
        android:background="@color/black"
        tools:text="@string/carname" />

<!--    <ImageView-->
<!--        android:id="@+id/imageView"-->
<!--        android:layout_width="100dp"-->
<!--        android:layout_height="97dp"-->
<!--        android:layout_gravity="center"-->
<!--        app:srcCompat="@drawable/login" />-->

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:textColor="@color/white"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:layout_marginTop="70dp"
        android:hint="Username"
        android:textColorHint="@color/white"
        android:inputType="textPersonName"
        android:text="@string/Username" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/white"
        android:hint="Password"
        android:inputType="textPassword"
        android:text="@string/Password" />

    <Button
        android:id="@+id/bookbtn"
        android:layout_width="match_parent"
        android:background="@drawable/round_button"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/Button"
        android:textAlignment="center" />

    <Button
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/signin" />


</LinearLayout>